# avito-test-task

./: .dockerignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3cc06476a787_pull_requests.py  786c04644612_init.py
src/: entities.py  exceptions.py  main.py  type_defs.py
src/api/: exceptions.py  pull_requests.py  schemas.py  tags.py  teams.py  users.py
src/db/: database.py  exceptions.py  models.py
src/db/repositories/: base.py  pull_requests.py  teams.py  users.py
src/schemas/: base.py  pull_requests.py  teams.py  users.py
src/services/: exceptions.py  pull_requests.py  teams.py  users.py
